Using RaceNumberHome.update()